--- a/app/views/admin/votes/new.html.erb
+++ b/app/views/admin/votes/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, t('vote.admin_votes')) %>
 <div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
   <div class="headline">
     <h2><%= t('vote.new_vote') %></h2>
