--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,13 +1,40 @@
+<% provide(:title, t('vote.title')) %>
 <div class="headline">
-  <h2><%= t('vote.title') %></h2>
+  <h1><%= t('vote.title') %></h1>
 </div>
-<div class="col-md-12">
-  <%= grid(@votes_grid) do |grid|
-    grid.blank_slate do
-      t('vote.no_votes_open')
-    end
-    grid.column name: t('attributes.name'), attribute: 'title', filter: false do |v|
-      link_to v.title, new_vote_vote_post_path(vote_id: v.id)
-    end
-  end -%>
+
+<div class="col-md-3 col-sm-12 vote">
+  <% if current_user.present? && current_user.presence == true %>
+    <span class="present">
+      <%= fa_icon('check-circle-o') %>
+      <%= t('vote_user.state.present') %>
+    </span>
+  <% else %>
+    <span class="not-present">
+      <%= fa_icon('times-circle-o') %>
+      <%= t('vote_user.state.not_present') %>
+    </span>
+  <% end %>
+  <hr>
+
+  <div class="headline">
+    <h3><%= t('agenda.current') %></h3>
+  </div>
+
+  <% if @vote_status.agenda.present? %>
+    <h5 class="vote agenda">
+      <%= @vote_status.agenda.to_s %>
+    </h5>
+
+    <%= models_name(Vote) %>
+    <ul class="list">
+      <% @vote_status.agenda.votes.each do |vote| %>
+        <li><%= vote.title %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
+<div class="col-md-9 col-ms-12 vote">
+  <%= user_vote_link(@vote_status)%>
 </div>
