--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,9 +1,18 @@
-<p>
-  <%= t('welcome')%> <%= @email %>
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+    <h1><%= t('user.mailer.hello', user: @user.to_s) %></h1>
+    <%= simple_format(t('user.mailer.registered')) %>
+    <%= simple_format(t('user.mailer.before_starting')) %>
 
-<%= simple_format(t('devise.mailer.confirmation_instructions.description_link')) %>
-<p>
-<%= link_to(t('devise.mailer.confirmation_instructions.link'),
-            user_confirmation_url(confirmation_token: @token)) %>
-</p>
+    <p>
+      <%= link_to(t('user.mailer.please_confirm'), user_confirmation_url(confirmation_token: @token)) %>
+    </p>
+
+    <%= simple_format(t('user.mailer.enjoy')) %>
+    <%= simple_format(t('user.mailer.problem')) %>
+  </body>
+</html>
