--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,13 +1,18 @@
-<p>Hej <%= @resource.email %>!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
+    <h1><%= t('user.mailer.hello', user: @user.to_s) %></h1>
+    <%= simple_format(t('user.mailer.reset_requested')) %>
+    <%= simple_format(t('user.mailer.reset_until', time: l(Time.zone.now))) %>
 
-<p>Någon skickade efter en återställning av ditt lösenord på Fsektionen.se.</p>
-<p>Fram till <%= (Time.zone.now + 6.hours) %> kan du ändra ditt lösenord på länken nedan:</p>
+    <p>
+      <%= link_to(t('user.mailer.change_password'), edit_password_url(@resource, reset_password_token: @token)) %>
+    </p>
 
-<p>
-<%= link_to(t('devise.passwords.change'), edit_password_url(@resource, reset_password_token: @token)) %>
-</p>
-
-<p>
-  Var det inte du som efterfrågade detta?
-  Då finns det en möjlighet att någon utomstående försöker ta sig in, men frukta inte - de kommer inte kunna ändra ditt lösenord utan att använda länken i mejlet.
-</p>
+    <%= simple_format(t('user.mailer.reset_not_you')) %>
+    <%= simple_format(t('user.mailer.reset_problem')) %>
+  </body>
+</html>
