Vote status, agenda connection and reset vote function
Changing `:open` to `:status` for `Vote`
Only allows votes to be opened if they belong to the current agenda
Prevents agendas from closing if they have associated votes that are open
Makes it possible to reset votes

Closes #29

--- a/app/views/admin/agendas/index.html.erb
+++ b/app/views/admin/agendas/index.html.erb
@@ -23,7 +23,7 @@
       link_to a, edit_admin_agenda_path(a)
     end
     grid.column name: Agenda.human_attribute_name(:status), attribute: 'status', class: 'status' do |a|
-      status_str(a.status)
+      agenda_status_str(a.status)
     end
     grid.column name: t('agenda.change_status'), class: 'state' do |a|
       agenda_state_link(a)
