--- a/app/views/admin/agendas/_form.html.erb
+++ b/app/views/admin/agendas/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [:admin, @agenda] do |f| %>
   <%= f.input :title %>
   <%= f.input :index, as: :integer, input_html: { min: '1'} %>
-  <%= f.input :status, collection: status_collection,
+  <%= f.input :status, collection: agenda_status_collection,
                        input_html: { class: 'select2' }, include_blank: false %>
   <%= f.input :parent_id, collection: Agenda.all, include_hidden: false,
                 input_html: { class: 'select2' }, required: false %>
