--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,19 @@
-<%= simple_form_for(user, url: own_user_path, html: { class: 'reg-page' }) do |f| %>
-  <%= f.input :firstname %>
-  <%= f.input :lastname %>
+<%= simple_form_for(user, url: own_user_path, html: {class: 'reg-page'}) do |f| %>
+  <table class="table">
+    <tr>
+      <td><%= User.human_attribute_name(:firstname) %></td>
+      <td><%= user.firstname %></td>
+    </tr>
+    <tr>
+      <td><%= User.human_attribute_name(:lastname) %></td>
+      <td><%= user.lastname %></td>
+    </tr>
+  </table>
+  <%= image_tag('img/mecenatkort', class: 'img-responsive') %>
   <%= f.input(:card_number, input_html: {data: {mask: '9999-9999-9999-9999'},
-                                         autocomplete: 'off'}) %>
-  <%= f.button :submit, id: 'user-info-submit' %>
+                                         autocomplete: 'off'},
+                            hint: t('user.visibility.card_number')) %>
+  <%= f.button(:submit, t('user.submit_card_number'),
+               id: 'user-card-number-submit',
+               data: {confirm: t('user.confirm_card_number')}) %>
 <% end %>
