Admin vote page: new look
Adding more disposition and current vote status
Adding refresh action for amount of votes

--- a/app/assets/stylesheets/partials/_votes.scss
+++ b/app/assets/stylesheets/partials/_votes.scss
@@ -68,4 +68,23 @@
       font-size: 26px;
     }
   }
+
+  .choices,
+  .vote-count {
+    display: block;
+
+    .title {
+      display: block;
+    }
+
+    .value {
+      display: block;
+      font-size: 18px;
+    }
+
+  }
+
+  &.margin {
+    margin-bottom: 20px;
+  }
 }
