--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -10,7 +10,8 @@
     <% end %>
     &nbsp;|&nbsp;&nbsp;
     <%= Time.current.year %>
-    &copy;<%= link_to('Röstsystem.se', 'http://rostsystem.se') %>
+    &copy;
+    <%= link_to('Röstsystem.se', 'http://rostsystem.se') %>
   </p>
 </div>
 
