Admin vote views

--- a/app/assets/stylesheets/partials/_votes.scss
+++ b/app/assets/stylesheets/partials/_votes.scss
@@ -85,6 +85,11 @@
   }
 
   &.margin {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
+
+  &.button {
+    width: 87px;
   }
 }
