--- a/app/views/users/_confirm_information.html.erb
+++ b/app/views/users/_confirm_information.html.erb
@@ -3,17 +3,7 @@
     <div class="headline">
       <h2><%= t('user.your_status') %></h2>
     </div>
-    <% if current_user.presence == true %>
-      <span class="present">
-        <%= fa_icon('check-circle-o') %>
-        <%= t('vote_user.state.present') %>
-      </span>
-    <% else %>
-      <span class="not-present">
-        <%= fa_icon('times-circle-o') %>
-        <%= t('vote_user.state.not_present') %>
-      </span>
-    <% end %>
+    <%= user_presence_status(current_user) %>
 
     <% if current_user.card_number.present? %>
       <span class="present">
