Google Analytics: adding more statistics tracking
Using an environmental variable for storing the tracking code.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,5 +34,7 @@
     <%= render 'layouts/content' %>
 
     <%= render 'layouts/copyright' %>
+
+    <%= render 'layouts/google_analytics' %>
   </body>
 </html>
