Updating 'about' text Added 'votecode' info Removed some 'spindelman' references

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -21,6 +21,9 @@
   <h3><%= t('about.votes.title') %></h3>
   <%= simple_format(t('about.votes.text')) %>
 
+  <h3><%= t('about.votecode.title') %></h3>
+  <%= simple_format(t('about.votecode.text')) %>
+
   <h3><%= t('about.anonymity.title') %></h3>
   <%= simple_format(t('about.anonymity.text')) %>
 
