Small view fixes

--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -6,7 +6,7 @@
 <div class="col-md-12">
   <%= link_to t('vote.new_vote'), new_admin_vote_path, class: 'btn primary' %>
   <% if can? :manage, User %>
-    <%= link_to t('user.manage'), admin_vote_users_path, class: 'btn secondary' %>
+    <%= link_to t('vote_user.manage'), admin_vote_users_path, class: 'btn secondary' %>
   <% end %>
   <% if can? :manage, Agenda %>
     <%= link_to t('agenda.manage'), admin_agendas_path, class: 'btn secondary' %>
