Updating attendance list
Adds '[DELETED]' to adjustments in the list that belong to deleted agendas
Enables CSV export for the attendance list

--- a/app/views/admin/vote_users/attendance_list.html.erb
+++ b/app/views/admin/vote_users/attendance_list.html.erb
@@ -13,12 +13,5 @@
   <% end %>
 </div>
 <div class="col-md-12">
-  <%= grid(@attend_grid) do |grid|
-    grid.column name: t('attributes.name'), attribute: 'lastname' do |user|
-      link_to user, admin_vote_user_path(user)
-    end
-    grid.column name: User.human_attribute_name('presence') do |user|
-      split_adjustments(user.adjustments.rank(:row_order))
-    end
-  end -%>
+  <%= render 'attendance_grid' %>
 </div>
