Fixing N+1 and view fixes
Adding Bullet to notify on N+1
Adding full path to Mecenat image

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,9 @@
 
 <div class="col-md-6 col-sm-12">
   <%= render '/users/confirm_information' %>
-  <%= render '/agendas/start_page', agendas: @start_page.agendas %>
+  <% cache(@start_page.agendas) do %>
+    <%= render '/agendas/start_page', agendas: @start_page.agendas %>
+  <% end %>
 </div>
 
 <div class="col-md-6 col-sm-12">
