--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,17 +1,12 @@
 <%= title(model_name(Contact))%>
 <div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
   <div class="headline">
-    <h2><%= @contact.to_s %></h2>
+    <h1><%= @contact.to_s %></h1>
   </div>
 
   <%=simple_format(@contact.text)%>
   <hr>
-  <%= simple_form_for(@contact, method: :post, url: mail_contact_path(@contact)) do |f| %>
-    <%= f.input :sender_name, required: true %>
-    <%= f.input :sender_email, required: true %>
-    <%= f.input :sender_message, as: :text %>
-    <%= f.button :submit, t('contact.send_message') %>
-  <% end %>
+  <%= render 'send_form', contact: @contact %>
   <hr>
   <%= link_to(t('contact.back_to_index'), contacts_path, class: 'btn secondary') %>
 </div>
