--- a/app/views/layouts/_admin_dropdown.html.erb
+++ b/app/views/layouts/_admin_dropdown.html.erb
@@ -27,7 +27,7 @@
     </li>
 
     <li class="dropdown-submenu">
-      <%= link_to models_name(Notice), notices_path %>
+      <%= link_to models_name(Notice), admin_notices_path %>
     </li>
 
     <li class="dropdown-submenu">
