--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -44,7 +44,7 @@
   </ul>
 
   <h3><%= t('about.questions') %></h3>
-  <% id = Contact.find_by(slug: 'röstiga').try(:value).id %>
+  <% id = Contact.find_by(slug: 'röstiga').try(:id) %>
   <% if id.present? %>
     <%= link_to(contact_path(id), class: 'btn primary') do %>
       <%= fa_icon('envelope-o') %>&nbsp; Röstiga
