--- a/app/views/admin/news/new.html.erb
+++ b/app/views/admin/news/new.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-8 col-md-offset-2 col-sm-12 reg-page">
   <div class="headline">
-    <h2><%= t(:new_attr, attr: model_name(News)) %></h2>
+    <h1><%= t('news.new') %></h1>
   </div>
   <%= render 'form'%>
   <hr>
