Javascript refresh: fix double loading
Adding data-position to the div in order to make them depend on
which page it was loaded on

--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -17,7 +17,7 @@
   <% end %>
 </div>
 
-<div class="col-md-9 col-sm-12 vote status" id="vote-status">
+<div class="col-md-9 col-sm-12 vote status" id="vote-status" data-position="adjustment-index">
   <%= render '/admin/votes/status', vote_status_view: @vote_status_view %>
 </div>
 
