--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -19,7 +19,7 @@
   <hr>
 </div>
 
-<div class="col-md-12 vote status" id="vote-status">
+<div class="col-md-12 vote status" id="vote-status" data-position="vote-user-index">
   <%= render '/admin/votes/status', vote_status_view: @vote_status_view %>
 </div>
 
