--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -88,7 +88,7 @@
     <h2><%= t('vote.status') %></h2>
   </div>
 
-  <div class="vote status" id="vote-status">
+  <div class="vote status" id="vote-status" data-position="vote-show">
     <%= render '/admin/votes/status', vote_status_view: @vote_status %>
   </div>
 </div>
