--- a/app/views/agendas/_start_page.html.erb
+++ b/app/views/agendas/_start_page.html.erb
@@ -6,14 +6,17 @@
     <% agendas.each do |agenda| %>
       <li class="<%= "list-group-item #{agenda.current_status}" %>">
         <h4 class="list-group-item-heading">
-          <%= agenda.to_s %>
+          <%= agenda_link(agenda) %>
         </h4>
         <span class="badge">
           <%= agenda_status_str(agenda.current_status) %>
         </span>
         <p class="list-group-item-text">
           <% if agenda.children.present? %>
-            <%= agenda.children.index.map(&:to_s).join(", ") %>
+            <% agenda.children.index.each do |a| %>
+              <%= agenda_link(a) %>
+              <br>
+            <% end %>
           <% else %>
             <br>
           <% end %>
