--- a/app/views/admin/documents/_form.html.erb
+++ b/app/views/admin/documents/_form.html.erb
@@ -2,6 +2,8 @@
   <%= f.input :title %>
   <%= f.input :category, collection: @categories, input_html: { class: 'select2_tags' },
               include_blank: false %>
+  <%= f.input :agenda_id, collection: Agenda.order(:sort_index), include_hidden: false,
+                            input_html: { class: 'select2' }, required: false %>
   <% if @document.pdf.present? %>
     <p><%= link_to(@document.pdf_file_name, @document)%></p>
   <% end %>
