--- a/app/views/admin/vote_users/_search_row_header.html.erb
+++ b/app/views/admin/vote_users/_search_row_header.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <th><%= User.human_attribute_name(:name)%></th>
-  <th><%= User.human_attribute_name(:votecode)%></th>
   <th><%= User.human_attribute_name(:card_number)%></th>
   <th><%= t('vote_user.change_state') %></th>
+  <th><%= t('vote_user.reset_votecode') %></th>
 </tr>
